--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
     "python.pythonPath": "venv/bin/python3",
-    "python.linting.pylintArgs": ["--load-plugins", "pylint_django"]
+    "python.linting.pylintArgs": ["--load-plugins", "pylint_django", "--warning-only"]
 }
