ignore vscode, migrations, csv, mac fles

--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,18 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+
+# ---> VisualStudioCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+# Project-specific
+**/migrations/*
+!**/migrations/__init__.py
+*.csv
+
+# Mac-specific
+.DS_Store
