--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,24 @@
 astroid==2.2.3
 autopep8==1.4.3
+bokeh==1.0.4
 Django==2.1.7
 isort==4.3.10
+Jinja2==2.10
 lazy-object-proxy==1.3.1
+MarkupSafe==1.1.1
 mccabe==0.6.1
+numpy==1.16.2
+packaging==19.0
+Pillow==5.4.1
 pycodestyle==2.5.0
 pylint==2.3.1
 pylint-django==2.0.6
 pylint-plugin-utils==0.5
+pyparsing==2.3.1
+python-dateutil==2.8.0
 pytz==2018.9
+PyYAML==3.13
 six==1.12.0
+tornado==6.0.1
 typed-ast==1.3.1
 wrapt==1.11.1
