--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 astroid==2.2.3
 autopep8==1.4.3
 bokeh==1.0.4
-Django==2.1.7
+Django==2.2
 isort==4.3.10
 Jinja2==2.10
 lazy-object-proxy==1.3.1
@@ -19,6 +19,7 @@ python-dateutil==2.8.0
 pytz==2018.9
 PyYAML==3.13
 six==1.12.0
+sqlparse==0.3.0
 tornado==6.0.1
 typed-ast==1.3.1
 wrapt==1.11.1
